--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -34,6 +34,7 @@
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<version>8.0.32</version>
+			<scope>runtime</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.freemarker</groupId>
